--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-blue: #2A89C6;
+  
 }
 
 @media (prefers-color-scheme: dark) {
